# internal/entity/user.go
@@ -5,7 +5,7 @@ type User struct {
 	Name     string `json:"name" binding:"required"`
 	Surname  string `json:"surname"`
 	Email    string `json:"email" binding:"required"`
-	Password string `json:"-" db:"password_hash"`
+	Password string `json:"password" db:"password_hash"`
 }
 
 func (u *User) IsEmtpty() bool {
