# pkg/handler/auth.go
@@ -44,3 +44,37 @@ func (h *Handler) signUp(c *gin.Context) {
 		"id": id,
 	})
 }
+
+type signInInput struct {
+	Email    string `json:"email" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+// @Summary SignIn
+// @Tags auth
+// @Description authenticate account
+// @ID login-account
+// @Accept       json
+// @Produce      json
+// @Param input body signInInput true "account credentials"
+// @Success      200  {string} string "token"
+// @Failure      400,401  {object}  errorResponse
+// @Router       /auth/sign-in [post]
+func (h *Handler) signIn(c *gin.Context) {
+	var input signInInput
+
+	if err := c.BindJSON(&input); err != nil {
+		newErrorResp(c, http.StatusBadRequest, fmt.Sprintf("bad auth credentials: %s", err.Error()))
+		return
+	}
+
+	token, err := h.services.AuthenticateUser(input.Email, input.Password)
+	if err != nil {
+		newErrorResp(c, http.StatusUnauthorized, fmt.Sprintf("invalid auth credentials: %s", err.Error()))
+		return
+	}
+
+	c.JSON(http.StatusOK, map[string]interface{}{
+		"token": token,
+	})
+}
